# electronic-bot

./: .env  .gitignore  README.md  chat.ipynb  pyproject.toml
src/: Untitled.ipynb  bot.py  bot_test.py  utils.py
src/controllers/: chat_engine.py  rag.py  retrieval_argumented_generation.py
src/data/: orders.json  products.json
src/models/: orders.py  products.py
src/notebooks/: test.ipynb
src/rag/: 06_chat.ipynb  rag.ipynb
src/rag/docs/chroma/: chroma.sqlite3
src/rag/docs/returns_policies/: return_policies.docx
src/utils/: utils.py
test/controllers/: test_rag.py
test/models/: test_orders.py
test/utils/: test_utils.py
