[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project]
name = "assegni-api-lupin"
version = "4.1.5"
requires-python = ">=3.10.4"
dependencies = [
        "editdistance==0.6.0",
        "pillow==9.1.0",
        "scipy==1.8.1",
        "six==1.16.0",
        "python-dateutil==2.8.2",
        "ipykernel==6.15.0",
        "pandas==1.4.2",
        "python-Levenshtein==0.12.2",
        "opencv-python==4.6.0.66",
        "lmdb==1.3.0",
        "torch==1.11.0",
        "torchvision==0.12.0",
        "requests==2.28.0",
        "torch_position_embedding==0.8.0",
        "google-api-python-client==2.51.0",
        "google-cloud-storage==2.4.0",
        "ldap3==2.8.1",
        "pytest-cov==3.0.0",
        "PyYAML==6.0",
        "uvicorn==0.17.6",
        "fastapi==0.68.1",
        "starlette==0.14.2",
        "gunicorn==20.1.0"
]